--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,35 +1,108 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 * {
   box-sizing: border-box;
 }
 
-main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
-}
-
-.container {
+.hero {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
+}
+
+.about-section {
+  color: #fff;
+  height: 100%;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  background-color: #2d02b0;
+  background-image: linear-gradient(135deg, #2d02b0 0%, #00cdac 100%);
+  border-top: 0;
+  padding-bottom: 10%;
+}
+
+.cta-btn {
+  z-index: 1;
+  padding: 0.8rem 1.6rem;
+  font-weight: 700;
+  line-height: 1;
+  transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+  display: inline-block;
+  position: relative;
+}
+
+.cta-btn--hero {
+  color: #00cdac;
+  -webkit-text-fill-color: #00cdac;
+  -webkit-border-image-slice: 1;
+  border-style: solid;
+  border-width: 2px;
+  border-image: linear-gradient(135deg, #2d02b0 0%, #00cdac 100%) 1;
+}
+
+.cta-btn--resume {
+  color: #fff;
+  border: 2px solid #fff;
+}
+
+.footer {
+  color: #fff;
+  background-color: #0b0101;
+  padding: 4.8rem 0;
+}
+
+@media (max-width: 37.5em) {
+  .cta-btn--hero {
+    -webkit-text-fill-color: #00cdac;
+    background-image: none;
+    border: 2px solid #00cdac;
+  }
+
+  #contact {
+    clip-path: none;
+    margin-top: 0;
+    padding: 10rem 0;
+  }
+
+  .footer {
+    border: 0;
+  }
+}
+
+.container,
+.container-fluid,
+.container-xxl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.social-links {
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
+  display: flex;
+}
+
+#contact {
+  clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+  color: #fff;
+  background-image: linear-gradient(135deg, #2d02b0 0%, #00cdac 100%);
+
+  margin-bottom: -1px;
+  padding: 15rem 0 10rem;
 }
